# inkling-quant

./: .gitignore  .mailmap  README.md  pyproject.toml
configs/compatibility/: inkling_q3_k_m.json
configs/evaluations/: mlx_public_moe_tiny_eval.yaml  public_moe_cpu_contract.yaml  stories15m_native_int8_confirmatory_256.yaml  tiny_cpu.yaml  tiny_multimodal.yaml
configs/experiments/: hf_stories15m_gptq_cpu_pilot.yaml  hf_stories15m_native_int8_isolated_peak.yaml  hf_stories15m_native_int8_source_weight_free_peak.yaml  hf_stories15m_tinystories_native_confirmatory_256.yaml  hf_stories15m_tinystories_native_int4_quality.yaml  hf_stories15m_tinystories_native_int8_confirmatory_256.yaml  hf_stories15m_tinystories_native_int8_quality.yaml  hf_stories15m_tinystories_native_quality.yaml  hf_stories15m_tinystories_quality.yaml  inkling_q3_k_m_modal.yaml  inkling_q3_k_m_smoke_modal.yaml  inkling_q3_k_m_source_adoption.json  inkling_q3_k_m_verified_export.json  mlx_stories15m_moe_q4.yaml  mlx_stories15m_moe_q8.yaml  tiny-moe-baseline.yaml  tiny-moe-int8.yaml  tiny_dense_int8.yaml  tiny_moe_baseline.yaml  tiny_moe_cuda.yaml  tiny_moe_int4.yaml  tiny_moe_int8.yaml  tiny_moe_mps.yaml  tiny_moe_native_int4.yaml  tiny_moe_native_int8.yaml  tiny_moe_native_int8_isolated_peak.yaml
configs/models/: hf_mixtral_tiny_random.yaml  hf_stories15m_moe.yaml  mlx_stories15m_moe.yaml  tiny_dense.yaml  tiny_moe.yaml  tiny_multimodal.yaml
configs/post_training/: stories15m_router_10step.yaml
configs/quantization/: awq_gptqmodel_capability_probe.yaml  dynamic_int8.yaml  finegrained_fp8_capability_probe.yaml  frequency_tiered.yaml  gptq_gptqmodel_capability_probe.yaml  gptq_gptqmodel_cpu_stories15m.yaml  mlx_affine_q4_g32.yaml  mlx_affine_q8_g32.yaml  native_dynamic_int8.yaml  native_int4_kleidiai.yaml  noop.yaml  weight_only_int4.yaml
docs/experiments/: cpu-tensor-parallel-tiny-mlp-torch-2.13.json  cpu-tensor-parallel-tiny-mlp-torch-2.13.result.canonical.json  native-cpu-kernels-m3-torch-2.13.json  sglang-mlx-stories15m-smoke.json  stories15m-gptq-cpu-pilot.json  stories15m-moe-expert-tensor-parallel-m3.json  stories15m-moe-mlx-full-quantization-m3.json  stories15m-moe-native-linear-quality-full-v2.json  stories15m-moe-native-linear-quality-full.json  stories15m-moe-native-linear-quality.json  stories15m-moe-registered-mlx-pipeline-m3.json  stories15m-moe-tinystories-quality.json  stories15m-native-int8-confirmatory-256-m3.json  stories15m-native-int8-confirmatory-256-preregistration.json  stories15m-native-int8-isolated-peak-m3.json  stories15m-native-int8-source-weight-free-peak-m3.json  stories15m-router-domain-pair-10step-failed-m3.json  tiny-moe-native-int8-isolated-peak-m3.json  vllm-0.23.0-apple-cpu-build-blocker.json  vllm-0.23.0-apple-cpu-stories15m-inference.json
patches/: inkling-smoke-a015409.patch
scripts/: __init__.py  benchmark_native_cpu_quant.py  check_coverage.py  evaluate_mlx_public_moe_quant.py  evaluate_public_moe_native_quality.py  evaluate_public_moe_quality.py  evaluate_vllm_public_moe_cpu.py  manage_inkling_modal.py  manage_inkling_smoke_modal.py  preflight_inkling_gguf.py  probe_serving_endpoint.py  quantize_inkling_modal.py  run_confirmatory_quality_attempt.py  run_cpu_tensor_parallel_smoke.py  run_mlx_router_preflight.py  run_public_moe_tensor_parallel_smoke.py  smoke_inkling_modal.py  verify_confirmatory_quality_repeats.py
scripts/patches/: vllm-0.23.0-apple-cpu-stories15m.patch
src/inkling_quant_lab/: __init__.py  __main__.py  artifacts.py  bootstrap.py  cli.py  (+15 more)
tests/: conftest.py
(+192 files in other folders)
